// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render label component Renders email Label block correctly 1`] = `
<div>
  <div
    class="sc-hKwDye iXxlrE"
  >
    <label
      class="sc-jRQBWg cAgqGx"
      for="email"
    >
      <input
        class="sc-iCfMLu XAWHp"
        id="email"
        name="email"
        type="text"
        value=""
      />
      <span
        class="sc-gKclnd chvozb"
      >
        Email
      </span>
    </label>
    <span
      class="sc-dkPtRN jJFEIl"
    >
      Please enter a valid email
    </span>
  </div>
</div>
`;

exports[`Render label component Renders name Label block correctly 1`] = `
<div>
  <div
    class="sc-hKwDye iXxlrE"
  >
    <label
      class="sc-jRQBWg cAgqGx"
      for="name"
    >
      <input
        class="sc-iCfMLu XAWHp"
        id="name"
        name="name"
        type="text"
        value=""
      />
      <span
        class="sc-gKclnd chvozb"
      >
        Name
      </span>
    </label>
    <span
      class="sc-dkPtRN jJFEIl"
    >
      What's your name
    </span>
  </div>
</div>
`;

exports[`Render label component Renders password Label block correctly 1`] = `
<div>
  <div
    class="sc-hKwDye iXxlrE"
  >
    <label
      class="sc-jRQBWg cAgqGx"
      for="password"
    >
      <input
        class="sc-iCfMLu XAWHp"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <span
        class="sc-gKclnd chvozb"
      >
        Password
      </span>
    </label>
    <span
      class="sc-dkPtRN jJFEIl"
    >
      Please enter a password greater than 8 characters
    </span>
  </div>
</div>
`;
